# GCDFinder

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh
inc/: EuclidianGCD.h  InputReader.h  Utils.h
include/: EuclidianGCD.h
src/: EuclidianGCD.c  InputReader.c  Utils.c  main.c
